test/css/scss/sizing.scss
/*

    1 - Mobile
    2 - Tablet
    3 - The rest

*/

@media only screen and (max-width: 550px) {
    /* rules for mobile devices */
    .hero-contents h1 {
        font-size: 50px !important;
    }
    .hero-contents span {
        font-size: 27px !important;
    }
    .navbar .logo {
        font-size: 1.5rem;
    }
    .navbar i {
        font-size: 2.5rem;
    }
    .desktop-only {
        display: none !important;
    }
    .box {
        width: 72vw;
        margin-left: auto;
        margin-right: auto;
        box-shadow: none;
    }
}

@media only screen and (min-width:550px) and (max-width: 800px) {
    /* rules for tablets */
    .box {
        width: 60vw;
    }
    .box-align-right {
        margin-left: 20vw;
    }
    .mobile-only {
        display: none !important;
    }
    .desktop-only {
        display: none !important;
    }
    .transparent-nav {
        background: linear-gradient(0deg, rgba(15, 22, 24, 0) 0%, rgba(15, 22, 24, 1) 100%) !important;
    }
}

@media only screen and (min-width:800px) {
    .mobile-only {
        display: none !important;
    }
    .transparent-nav {
        background: linear-gradient(0deg, rgba(15, 22, 24, 0) 0%, rgba(15, 22, 24, 1) 100%) !important;
    }
}

